[package]
name = "hierarchy_labellisation"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/IGNF/hierarchy_labellisation"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
geotiff = "0.0.2"
image = "0.24.4"
ndarray = "0.15.6"
palette = "0.6.1"
simple_clustering = "0.1.0"
wasm-bindgen = "0.2"

