[package]
name = "hierarchy_labellisation"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/IGNF/hierarchy_labellisation"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.24.4"
ndarray = "0.15.6"
num-traits = "0.2.15"
palette = "0.6.1"
petgraph = "0.6.2"
simple_clustering = "0.1.0"
wasm-bindgen = "0.2.81"

[dependencies.web-sys]
version = "0.3.60"
features = ["console"]

[profile.release]
opt-level = 3
